0.5.0/k8/ingress.yaml
# This file is used to create an Ingress resource in the Kubernetes cluster.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-demo-ingress
  namespace: default
spec:
  rules:
  - host: rocketscore.com #Client app domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatewaygenius-demo-service
            port:
              number: 80
  - host: pro.rocketscore.com #Client app domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pro-demo-service
            port:
              number: 80
