0.5.0/k8/networkpolicy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-pro-to-gatewaygenius
#   namespace: default
# spec:
#   policyTypes:
#   - Ingress
#   podSelector:
#     matchLabels:
#       app: gatewaygenius-demo # Adjust this label to match your Node.js app
#   ingress:
#   - from:
#     - podSelector:
#         matchLabels:
#           app: pro-demo # Adjust this label to match your Next.js app
#     ports:
#     - protocol: TCP
#       port: 80

# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-all-to-gatewaygenius-demo
#   namespace: default
# spec:
#   policyTypes:
#   - Ingress
#   podSelector:
#     matchLabels:
#       app: gatewaygenius-demo
#   ingress:
#   - {}

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-to-gatewaygenius-demo
  namespace: default
spec:
  policyTypes:
  - Ingress
  - Egress # Adding egress to the policy types
  podSelector:
    matchLabels:
      app: gatewaygenius-demo
  ingress:
  - {}
  egress:
  - to:
    - namespaceSelector: {} # Allows to all namespaces; adjust as necessary
      podSelector: {} # Allows to all pods; adjust as necessary
    ports:
    - protocol: UDP
      port: 53 # DNS typically uses port 53 UDP
    - protocol: TCP
      port: 53 # DNS might also use TCP 53 in some cases
